tests/good/misc/coalesce-lea.pas
program coalesce_lea;

var
    n: integer;

begin
    Read(n);
    WriteLn('4*', n, '+1=', 4*n+1);
    WriteLn(n, '+5*', n, '=', n+5*n);
end.
