tests/bad/declare-malloc-variable.pas
program declare_malloc_variable;
var
  malloc: integer;
begin
  malloc := 1;
end.
